--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   isar_flutter_libs: ^3.0.5
   intl: ^0.18.0
   ntp: ^2.0.0
+  url_launcher: ^6.1.9
 
 dev_dependencies:
   flutter_test:
